--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nodejs-expense-task",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon start app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon start server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
